--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,72 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
+*{
+  box-sizing: border-box;
 }
 
-/* line 22, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
+html{
+  width: 100%;
+  height: 100%;
 }
-
-/* line 24, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 26, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 28, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-a img {
+body{
+  margin:0;
   border: none;
+  padding: 0;
+  font-family: Circular,Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #2e2f33;
+  background-color: #ffffff;
+}
+.container{
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.nav-header{
+  display: block;
+  float: left;
+  margin: 0;
+  max-height: 60px;
 }
 
-/* line 116, ../../../.rvm/gems/ruby-1.9.3-p551@rails3tutorial/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
+.navbar{
+  position: relative;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 0;
+  border: 1px solid transparent;
+}
+
+.navbar-logo{
+  margin-top:10px;
+  margin-bottom:10px;
+  width: 132px;
+  height: 40px;
+  background-size: 132px 40px;
+  background-image: url("../img/Spotify_logo_with_text.png");
+  background-repeat: no-repeat;
+  color:transparent;
+  background-color: transparent;
+  border: 0;
+  float: left;
+}
+.nav-title{
+  float:left;
+  font-weight: 300;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 6px;
+  padding-top: 1px;
+  font-size: 26px;
+  color:white;
+}
+.navbar-fixed-top{
+  z-index: 999;
+  position: fixed;
+  top:0;
+}
+
+.navbar-black{
+  background-color: black;
+  border-color: #2e2f33;
 }
