--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-html{
+html, body{
   width: 100%;
   height: 100%;
 }
@@ -13,8 +13,7 @@ body{
   font-family: Circular,Helvetica,Arial,sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #2e2f33;
-  background-color: #ffffff;
+  background: #222326;
 }
 .container{
   margin-right: auto;
@@ -69,4 +68,56 @@ body{
 .navbar-black{
   background-color: black;
   border-color: #2e2f33;
+}
+
+.form-control{    
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #2e2f33;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #d9dadc;
+    border-radius: 0;
+}
+
+.btn{
+  font-size: 18px;
+  line-height: 1.5;
+  border-radius: 500px;
+  padding: 10px 45px 6px;
+  border-width: 0;
+  letter-spacing: 1.2px;
+  min-width: 130px;
+  text-transform: uppercase;
+  white-space: normal;
+  margin: 10px;
+  transition: ease .2s;
+  background: limegreen;
+}
+
+.btn:hover{
+  background:seagreen;
+}
+#content{
+}
+
+#spotify-search{
+  padding-top: 20px;
+}
+
+#spotify-artist-results img{
+  margin: auto;
+  width: 250px;
+  height: 250px;
+  float: left;
+  margin: 0 25px;
+}
+
+#artist-info h2{
+  color: white;
+  padding-top:20px;
 }
